1.2dev: some fixes for the ticket changelog UI refresh
 - `trac-author-user` as bold black is too obtrusive, soften it with
   #666 gray
 - long attachment change fields no longer overlap comments
 - restore order of the comment form buttons (//Reply//, //Edit//,
   //Delete//; not convinced it's better that way, it's just the way
   it used to be)
 - `clear: right` for the preview as well (r14465)
 - fix auto-preview updates:
   - replaces `#changelog` //content//, so that mouseenter and
     mouseleave callbacks stay effective
   - //Show comments// and ///Show property changes// states are now
     correctly restored

Closes #12347.


git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@14557 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -145,6 +145,7 @@ ul.children > li.child {
 }
 #changelog ul.children h3 { margin-right: .4em }
 #changelog pre.wiki, #changelog div.code { clear: right }
+#ticketchange pre.wiki, #ticketchange div.code { clear: right }
 
 .in-reply-to:before { content: "↑" }
 .follow-up:before { content: "↓" }
@@ -192,14 +193,6 @@ ul.children > li.child {
 }
 #changelog .trac-lastedit :link, #changelog .trac-lastedit :visited { color: inherit }
 
-/* Change panel: */
-.trac-change-panel {
- margin: 0 0 1.5em 2em;
- padding-bottom: 1em;
- max-width: 66%;
- float: right;
-}
-
 /*  - Change controls */
 .trac-ticket-buttons {
  clear: right;
@@ -216,8 +209,8 @@ ul.children > li.child {
 #changelog .changes, #ticketchange .changes {
  clear: right;
  width: auto;
- margin: 0;
- padding: 0 .8em;
+ margin: 0 0 1.5em 2em;
+ padding: 0 .8em .2em;
  color: #663;
  border: 1px solid;
  border-color: #eea #dd9 #dd9 #eea;
