--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -441,6 +441,7 @@ div.trac-content {
 }
 .trac-author-user {
  font-weight: bold;
+ color: #666;
 }
 
 /* Help links */
